<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/label_user_id"
            android:textColor="@color/grey_3"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:text="@string/form_dot"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand_bold" />

        <TextView
            android:id="@+id/text_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/label_name"
            android:textColor="@color/grey_3"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:text="@string/form_dot"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand_bold" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="@string/app_name" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>