<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/image_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/cd_back_button"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="textStart" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/text_register"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/text_label_name"
            style="@style/LabelInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <com.adasoraninda.dicodingstoryapp.common.view.InputView
            android:id="@+id/input_name"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/text_label_email"
            style="@style/LabelInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <com.adasoraninda.dicodingstoryapp.common.view.InputView
            android:id="@+id/input_email"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/text_label_password"
            style="@style/LabelInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <com.adasoraninda.dicodingstoryapp.common.view.InputView
            android:id="@+id/input_password"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>