<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/image_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/cd_back_button"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/text_data_loaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/pink"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:text="@string/data_loaded"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/quicksand_bold" />

    <ImageButton
        android:id="@+id/image_load_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/cd_load_more_data"
        android:padding="8dp"
        android:src="@drawable/ic_refresh" />

</FrameLayout>