<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_story"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@color/pink"
                    android:clickable="true"
                    android:contentDescription="@string/cd_an_image_of_story_dicoding"
                    android:focusable="true"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/image_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/teal_200"
                    android:contentDescription="@string/cd_back_button"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/text_info_click_image"
                    style="@style/TitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/click_to_add_image"
                    android:textSize="20sp"
                    app:drawableTopCompat="@drawable/ic_image" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"
                    android:textColor="@color/grey_3"
                    android:textSize="16sp"
                    app:fontFamily="@font/quicksand_bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <com.adasoraninda.dicodingstoryapp.common.view.InputView
                    android:id="@+id/input_desc"
                    style="@style/InputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="4dp"
                    tools:text="@tools:sample/lorem" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <Button
                    android:id="@+id/button_create_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/create_story" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>