<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_story"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/cd_an_image_of_story_dicoding"
                android:scaleType="centerCrop"
                android:transitionName="image"
                tools:src="@color/teal_200" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/pink"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:textColor="@color/white"
                android:transitionName="date"
                app:fontFamily="@font/quicksand_bold"
                tools:text="@string/app_name" />

            <ImageButton
                android:id="@+id/image_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/teal_200"
                android:contentDescription="@string/cd_back_button"
                android:elevation="4dp"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="@color/grey_3"
                app:fontFamily="@font/quicksand_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/text_name"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_2"
                android:paddingHorizontal="4dp"
                android:textSize="20sp"
                android:transitionName="name"
                tools:text="@string/app_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textColor="@color/grey_3"
                app:fontFamily="@font/quicksand_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_2"
                android:lineSpacingExtra="4dp"
                android:paddingHorizontal="4dp"
                android:textColor="@color/grey_3"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
